fixed image distortion

--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -120,6 +120,7 @@
     .solutions{
         margin-bottom: 4rem;
         padding: 4rem 0;
+        text-align: center;
 
 
         .upper-container{
