--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -358,6 +358,7 @@ header{
             border-radius: 26px 0 0 26px;
             height: 100%;
             width: 100%;
+            object-fit: cover;
         }
 
     }
